Add in some eclipse collections benchmarks.